--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- 视口设置，确保在移动设备上正确显示 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- 页面标题 -->
-  <title>SmilingZH</title>
+  <title>数绘古意</title>
   <!-- 全局字体样式设置 -->
   <style>
     * {
@@ -45,9 +45,9 @@
       }
     })();
   </script>
-  <script type="module" crossorigin src="./assets/js/index-CS_IQSIi.js"></script>
+  <script type="module" crossorigin src="./assets/js/index-BHvr__5F.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/js/vendor-BkTh2SM9.js">
-  <link rel="stylesheet" crossorigin href="./assets/css/index--MrrV7OD.css">
+  <link rel="stylesheet" crossorigin href="./assets/css/index-DogcqtW1.css">
 </head>
 
 <body>
