--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- 字符编码设置为UTF-8，支持多语言字符 -->
   <meta charset="UTF-8" />
   <!-- 网站图标，使用Vite默认图标 -->
-  <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./logo.svg" />
   <!-- 视口设置，确保在移动设备上正确显示 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- 页面标题 -->
@@ -45,8 +45,8 @@
       }
     })();
   </script>
-  <script type="module" crossorigin src="./assets/js/index-BHvr__5F.js"></script>
-  <link rel="modulepreload" crossorigin href="./assets/js/vendor-BkTh2SM9.js">
+  <script type="module" crossorigin src="./assets/js/index-4vPGLJHO.js"></script>
+  <link rel="modulepreload" crossorigin href="./assets/js/vendor-BA6P5Hzh.js">
   <link rel="stylesheet" crossorigin href="./assets/css/index-DogcqtW1.css">
 </head>
 
