--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <head>
   <!-- 字符编码设置为UTF-8，支持多语言字符 -->
   <meta charset="UTF-8" />
-  <!-- 网站图标，使用Vite默认图标 -->
-  <link rel="icon" type="image/svg+xml" href="./logo.svg" />
+  <!-- 网站图标，使用应用Logo -->
+  <link rel="icon" href="/logo.svg" />
   <!-- 视口设置，确保在移动设备上正确显示 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- 页面标题 -->
@@ -45,9 +45,9 @@
       }
     })();
   </script>
-  <script type="module" crossorigin src="./assets/js/index-2N_cIl-6.js"></script>
-  <link rel="modulepreload" crossorigin href="./assets/js/vendor-Cz7S_O-B.js">
-  <link rel="stylesheet" crossorigin href="./assets/css/index-C48ncfb_.css">
+  <script type="module" crossorigin src="/assets/js/index-BRBySVmZ.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/js/vendor-B5ERtXls.js">
+  <link rel="stylesheet" crossorigin href="/assets/css/index-EKKw-e5E.css">
 </head>
 
 <body>
